--- a/apps/webapp/public/rate-limited.html
+++ b/apps/webapp/public/rate-limited.html
@@ -1,3 +1,3 @@
 You are doing that too quickly. Please go to
-https://neuronpedia-exports.s3.amazonaws.com/index.html for direct data exports,
-or email support@neuronpedia.org for specific exports.
+https://neuronpedia-datasets.s3.us-east-1.amazonaws.com/index.html?prefix=v1/ for direct data exports, or email
+support@neuronpedia.org for specific exports.
